2003-04-28	fabian
    * Dynamically change the tab size based on the number of tabs
    * Version number updated to 0.7.0
    * Implemented "clear scrollback buffer"
    * Implemented "Save as a new entry" in Edit AddressEntry dialog
      to allow copy of existing entries.
    * Added support for CTRL-arrow keys
    
2003-04-28	ujwal

    * Massive code re-organization for revamped 
      Applescript support.
      
    * Fixed some memory related crashes when closing 
      windows created from Applescript.
      
    * Fixed bug in moving tab to new window caused by code 
      re-organization.


2003-04-27	fabian
    * Updated zh_CN and zh_TW IB files
    * Updated all string files
    
2003-04-26	ujwal

    * When changing colors, setting color scheme 
      popup button value to "Custom".
      
    * Now checking for minimum OS version on startup.
    
    * Added UI to customize color for bold output.

2003-04-25	ujwal

    * Fixed setting of tab position preference 
      in previous commit.
      
    * Fixed some quirks in color scheme selection in IB file.


2003-04-25	fabian
    * Changed the look of preference panel.
    * Added custom ANSI color support. 
      (need to update non english nib files)
      
2003-04-24	ujwal

    * Re-implemented window resizing.

2003-04-23	ujwal

    * Using real bell icon instead of warning sign.

    * Clearing bell on user input.
    
2003-04-21	ujwal
    
    * Set document cursor of scrollview to arrow cursor so that 
      the I-Beam cursor is disabled. Removed all other cursor related 
      code.

2003-04-20	ujwal
    
    * When preferences are read, if the selected font is not 
      found, fall back on the default fixed pit font for the user.
      
    * Increased the width of the encoding combo-box in all nibs.

2003-04-18	ujwal

    * Using named color contants instead of building our own 
      in VT100Terminal.
      
    * Fixed a bug in setting foreground and background colors at 