@@ -1,3 +1,9 @@
+2003-04-29	ujwal
+
+    * Added Applescript support for "write text <text>" 
+      and "write contents of file <file>" to a session.
+
+
 2003-04-28	fabian
     * Dynamically change the tab size based on the number of tabs
     * Version number updated to 0.7.0
